# bayesflow-rct

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  PLAN.md  README.md  docker-compose.yml  pyproject.toml  setup_env.py
.claude/: settings.local.json
.github/workflows/: tests.yml
docs/: calibration_loss_addon_plan.md  calibration_loss_best_practice.md  docker_deployment.md  environment_setup.md
docs/superpowers/specs/: 2026-03-11-ancova-optimization-notebook-design.md  plan-ancova-optimization-notebook.md
examples/: ancova_basic.ipynb  ancova_calibration_loss.ipynb  ancova_calibration_loss_development.ipynb  ancova_optimization.ipynb  calibration_loss_coarse_sweep.csv  calibration_loss_refinement_runs.csv
src/bayesflow_rct/: __init__.py
src/bayesflow_rct/core/: __init__.py  dashboard.py  infrastructure.py  objectives.py  optimization.py  results.py  threshold.py  utils.py  validation.py
src/bayesflow_rct/models/ancova/: __init__.py  adapter.py  config.py  hpo.py  metadata.py  model.py  simulator.py  training.py  validation.py
src/bayesflow_rct/plotting/: __init__.py  diagnostics.py
src/rctbp_bf_training/core/: infrastructure.py  optimization.py  validation.py
src/rctbp_bf_training/models/ancova/: model.py
tests/: __init__.py  test_package.py
tests/test_core/: test_infrastructure.py  test_optimization.py  test_validation.py
tests/test_models/test_ancova/: test_adapter.py  test_config.py  test_metadata.py  test_model.py  test_simulator.py
