[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesflow-rct"
version = "0.1.0"
description = "A Python package for RCT Bayesian power training"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "matthiaskloft"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "bayesflow>=2.0",
    "bayesflow-hpo>=0.1.0",
    "keras>=3.9,<3.13",  # Pin to <3.13 for BayesFlow 2.0.7 compatibility (bug in 3.13+)
    "optuna>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "notebook>=7.0",
]
calibration = ["bayesflow-calibration-loss @ git+https://github.com/matthiaskloft/bayesflow-calibration-loss.git"]

[project.urls]
Homepage = "https://github.com/matthiaskloft/bayesflow-rct"
Repository = "https://github.com/matthiaskloft/bayesflow-rct"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/bayesflow_rct/**/*.py" = ["N999"]
"src/bayesflow_rct/core/infrastructure.py" = ["E501"]
"src/bayesflow_rct/plotting/diagnostics.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "bayesflow_rct.plotting.*",
    "bayesflow_rct.core.threshold",
    "bayesflow_rct.core.utils",
    "bayesflow_rct.core.infrastructure",
    "bayesflow_rct.models.ancova.model",
    "bayesflow_rct.core.dashboard",
]
ignore_errors = true
